--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,10 @@ bind -T copy-mode-vi MouseDown1Pane select-pane \;\
   send-keys -X copy-pipe "pbcopy" \;\
   send-keys -X clear-selection
 
+# set inactive/active window styles
+set -g window-style fg=default,bg=default
+set -g window-active-style fg=default,bg=default
+
 # pane border
-set -g pane-border-bg default
-set -g pane-border-fg colour8
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour2
+set -g pane-border-style fg=colour252,bg=default
+set -g pane-active-border-style fg=colour2,bg=default
